--- a/ฺWeb_scraping/Web_Scraping.ipynb
+++ b/ฺWeb_scraping/Web_Scraping.ipynb
@@ -21,7 +21,7 @@
    "execution_count": 37,
    "source": [
     "tags = soup.find_all(\"h5\")\r\n",
-    "print(tags)"
+    "print(tags)\r\n"
    ],
    "outputs": [
     {
