--- a/ฺWeb_scraping/Web_Scraping.ipynb
+++ b/ฺWeb_scraping/Web_Scraping.ipynb
@@ -33,6 +33,62 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "course_card = soup.find_all(\"div\", class_=\"card\")\r\n",
+    "for course in course_card:\r\n",
+    "    course_name = course.h5.text\r\n",
+    "    course_price = course\r\n",
+    "    \r\n",
+    "\r\n",
+    "    print(course_name)\r\n",
+    "    print(course_price)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Python for beginner\n",
+      "<a class=\"btn btn-primary\" href=\"#\">Start</a>\n",
+      "Python for beginner\n",
+      "<a class=\"btn btn-primary\" href=\"#\">Start</a>\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "import requests\r\n",
+    "from bs4 import BeautifulSoup\r\n",
+    "\r\n",
+    "html_text = requests.get(\"https://www.timesjobs.com/candidate/job-search.html?searchType=personalizedSearch&from=submit&txtKeywords=python&txtLocation=\")\r\n",
+    "soup = BeautifulSoup(html_text.text, \"lxml\")\r\n",
+    "jobs = soup.find(\"li\", class_ = \"clearfix job-bx wht-shd-bx\")\r\n",
+    "company_name = jobs.find(\"h3\", class_ = \"joblist-comp-name\").text.replace(' ', '')\r\n",
+    "print(company_name)\r\n",
+    "\r\n",
+    "#print(html_text.text) This is alternative using this with no soup"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<h3 class=\"joblist-comp-name\">\n",
+      "    Pure Tech Codex Private Limited\n",
+      "    \n",
+      "    </h3>\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
