--- a/CN101_boring.ipynb
+++ b/CN101_boring.ipynb
@@ -38,6 +38,35 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "N = 7\r\n",
+    "for i in range(1,N+1):\r\n",
+    "  for j in range(N-i,0,-1):\r\n",
+    "    print(\"-\",end = '')\r\n",
+    "  for j in range(0,i*2-1):\r\n",
+    "    print(\"*\", end = '')\r\n",
+    "  print(\"\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "------*\n",
+      "-----***\n",
+      "----*****\n",
+      "---*******\n",
+      "--*********\n",
+      "-***********\n",
+      "*************\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
