--- a/ฺWeb_scraping/Web_Scraping.ipynb
+++ b/ฺWeb_scraping/Web_Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "from bs4 import BeautifulSoup\r\n",
     "\r\n",
@@ -13,12 +13,67 @@
     "    soup = BeautifulSoup(content, \"lxml\")\r\n",
     "    print(soup.prettify())\r\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<!DOCTYPE html>\n",
+      "<html lang=\"en\">\n",
+      " <head>\n",
+      "  <title>\n",
+      "   Home\n",
+      "  </title>\n",
+      " </head>\n",
+      " <body>\n",
+      "  <h1>\n",
+      "   Hello, I'm trying to do web scraping\n",
+      "  </h1>\n",
+      "  <div class=\"card\" id=\"card-python\">\n",
+      "   <div class=\"class-header\">\n",
+      "    Python\n",
+      "   </div>\n",
+      "   <div class=\"card-body\">\n",
+      "    <h5 class=\"card-body\">\n",
+      "     Python for beginner\n",
+      "    </h5>\n",
+      "    <p class=\"card-text\">\n",
+      "     This is just great\n",
+      "    </p>\n",
+      "    <a class=\"btn btn-primary\" href=\"#\">\n",
+      "     Start\n",
+      "    </a>\n",
+      "   </div>\n",
+      "  </div>\n",
+      "  <h1>\n",
+      "   Hello\n",
+      "  </h1>\n",
+      "  <div class=\"card\" id=\"card-python\">\n",
+      "   <div class=\"class-header\">\n",
+      "    Python\n",
+      "   </div>\n",
+      "   <div class=\"card-body\">\n",
+      "    <h5 class=\"card-body\">\n",
+      "     Python for beginner\n",
+      "    </h5>\n",
+      "    <p class=\"card-text\">\n",
+      "     This is just great\n",
+      "    </p>\n",
+      "    <a class=\"btn btn-primary\" href=\"#\">\n",
+      "     Start\n",
+      "    </a>\n",
+      "   </div>\n",
+      "  </div>\n",
+      " </body>\n",
+      "</html>\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "source": [
     "tags = soup.find_all(\"h5\")\r\n",
     "print(tags)\r\n"
@@ -36,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "source": [
     "course_card = soup.find_all(\"div\", class_=\"card\")\r\n",
     "for course in course_card:\r\n",
@@ -53,9 +108,27 @@
      "name": "stdout",
      "text": [
       "Python for beginner\n",
+      "<div class=\"card\" id=\"card-python\">\n",
+      "<div class=\"class-header\">\n",
+      "                Python\n",
+      "            </div>\n",
+      "<div class=\"card-body\">\n",
+      "<h5 class=\"card-body\">Python for beginner</h5>\n",
+      "<p class=\"card-text\">This is just great </p>\n",
       "<a class=\"btn btn-primary\" href=\"#\">Start</a>\n",
+      "</div>\n",
+      "</div>\n",
       "Python for beginner\n",
-      "<a class=\"btn btn-primary\" href=\"#\">Start</a>\n"
+      "<div class=\"card\" id=\"card-python\">\n",
+      "<div class=\"class-header\">\n",
+      "                Python\n",
+      "            </div>\n",
+      "<div class=\"card-body\">\n",
+      "<h5 class=\"card-body\">Python for beginner</h5>\n",
+      "<p class=\"card-text\">This is just great </p>\n",
+      "<a class=\"btn btn-primary\" href=\"#\">Start</a>\n",
+      "</div>\n",
+      "</div>\n"
      ]
     }
    ],
@@ -63,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "source": [
     "import requests\r\n",
     "from bs4 import BeautifulSoup\r\n",
@@ -72,6 +145,8 @@
     "soup = BeautifulSoup(html_text.text, \"lxml\")\r\n",
     "jobs = soup.find(\"li\", class_ = \"clearfix job-bx wht-shd-bx\")\r\n",
     "company_name = jobs.find(\"h3\", class_ = \"joblist-comp-name\").text.replace(' ', '')\r\n",
+    "skill = jobs.find(\"span\", class_ = \"srp-skills\")\r\n",
+    "print(skill)\r\n",
     "print(company_name)\r\n",
     "\r\n",
     "#print(html_text.text) This is alternative using this with no soup"
@@ -81,13 +156,31 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "<h3 class=\"joblist-comp-name\">\n",
-      "    Pure Tech Codex Private Limited\n",
-      "    \n",
-      "    </h3>\n"
+      "<span class=\"srp-skills\">\n",
+      "<strong class=\"blkclor\">python</strong>  ,  web technologies  ,  linux  ,  mobile  ,  mysql  ,  angularjs  ,  javascript\n",
+      "        \n",
+      "      </span>\n",
+      "\n",
+      "SuryaInformaticsSolutionsPvt.Ltd.\n",
+      "\n",
+      "\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
